cmake_minimum_required(VERSION 3.16)
project(SlateX VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(WIN32)
    set(CONTRIB_DIR "C:/Projects/Contrib")
    set(GNS_INCLUDE  "${CONTRIB_DIR}/GNS-sdk/include")
    set(GNS_LIB      "${CONTRIB_DIR}/GNS-sdk/lib/GameNetworkingSockets_s.lib")
    set(LUA_INCLUDE  "${CONTRIB_DIR}/Lua/include")
    set(LUA_LIB      "${CONTRIB_DIR}/Lua/lib/lua54.lib")
    set(SOL2_INCLUDE "${CONTRIB_DIR}/Sol2/include")
    set(RAYLIB_INCLUDE "${CONTRIB_DIR}/raylib/include")
    set(RAYLIB_LIB     "${CONTRIB_DIR}/raylib/lib/raylib.lib")
    set(OPENSSL_ROOT_DIR "${CONTRIB_DIR}/OpenSSL")
else()
    set(CONTRIB_DIR "/home/saturen/Projects/Contrib")
    set(GNS_INCLUDE  "/usr/local/include/GameNetworkingSockets")
    set(GNS_LIB      "/usr/local/lib/libGameNetworkingSockets_s.a")
    set(LUA_INCLUDE  "/usr/include/lua5.4")
    set(LUA_LIB      "lua5.4")
    set(SOL2_INCLUDE "/home/saturen/sol2/include")
    set(RAYLIB_INCLUDE "/usr/local/include")
    set(RAYLIB_LIB     "raylib")
endif()

add_subdirectory(Engine)
add_subdirectory(Network)
add_subdirectory(Rendering)
add_subdirectory(Runtime)
add_subdirectory(SXS)
add_subdirectory(Client)